# Python-Tasks

./: 1.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  prac1.py  pyproject.toml  qwe.py  shader1.py  task1.py  task7_test.py
matplot_7/: 1.py  2.py  3.py  4.py
prac12/: .coverage  raises.py  task1-2.py  task2.py  task3.py
prac13/: .coverage  task1.py  task2.py  task3.py  Практика_Python_Тема_5_2.ipynb
prac13/.ipynb_checkpoints/: Практика_Python_Тема_5_2-checkpoint.ipynb
prac14-15/: t1.py  t2.py  t3.py  t4.py
